# ugv_gazebo_sim

bunker/bunker_description/: CMakeLists.txt  package.xml
bunker/bunker_description/config/: laser_filter.yaml  mapper_params_online_async.yaml
bunker/bunker_description/launch/: box_filter_bunker.launch.py  display_bunker.launch.py
bunker/bunker_description/rviz/: model_display.rviz
bunker/bunker_description/urdf/: bunker.xacro
bunker/bunker_gazebo_sim/: CMakeLists.txt  package.xml
bunker/bunker_gazebo_sim/launch/: bunker_empty_world.launch.py  bunker_robot_state_publisher.launch.py  spawn_bunker.launch.py
bunker/bunker_gazebo_sim/models/bunker/: bunker.sdf
bunker/bunker_gazebo_sim/models/bunker_common/: model.config
bunker/bunker_gazebo_sim/models/world_inspection/: model.sdf
bunker/bunker_gazebo_sim/worlds/: inspection.world
scout/scout_description/: CMakeLists.txt  package.xml
scout/scout_description/config/: ekf.yaml  laser_filter.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  twist_mux.yaml
scout/scout_description/launch/: box_filter_scout_mini.launch.py  display_mini_models.launch.py  display_scout_mini.launch.py  display_scout_v2.launch.py  gazebo.launch.py  odom_imu_combined.launch.py  slam_localization.launch.py  slam_online_async.launch.py
scout/scout_description/rviz/: model_display.rviz  navigation.rviz  scout_mini.rviz  scout_mini_model_display.rviz  scout_mini_test_imu.rviz  scout_v2_model_display.rviz
scout/scout_description/urdf/: d435.urdf  mini.urdf  scout_mini.xacro  scout_mini_extras.urdf  scout_v2.urdf  scout_v2.xacro  scout_v2_extras.urdf
scout/scout_gazebo_sim/: CMakeLists.txt  package.xml
scout/scout_gazebo_sim/launch/: multi_scout_mini_empty_world.launch.py  multi_scout_v2_empty_world.launch.py  scout_empty_world.launch.py  scout_mini_empty_world.launch.py  scout_mini_robot_state_publisher.launch.py  scout_mini_workshop_world.launch.py  scout_robot_state_publisher.launch.py  scout_v2_empty_world.launch.py  scout_v2_robot_state_publisher.launch.py  spawn_scout_mini.launch.py  spawn_scout_v2.launch.py
scout/scout_gazebo_sim/models/scout_common/: model.config
scout/scout_gazebo_sim/models/scout_mini/: scout_mini.sdf
scout/scout_gazebo_sim/models/scout_v2/: scout_v2.sdf
scout/scout_gazebo_sim/models/world_bumblebee2_dummy/: model.sdf
scout/scout_gazebo_sim/models/world_coca_cola/: model.sdf
scout/scout_gazebo_sim/models/world_construction_cone_small/: model.sdf
scout/scout_gazebo_sim/models/world_toolbox_metal/: model.sdf
scout/scout_gazebo_sim/models/world_toolbox_metal_blue/: model.sdf
scout/scout_gazebo_sim/models/world_wire_shelf/: model.sdf
scout/scout_gazebo_sim/models/world_workshop_big/: model.config  model.sdf
scout/scout_gazebo_sim/models/world_workshop_small/: model.config  model.sdf
scout/scout_gazebo_sim/models/world_zed_dummy/: model.sdf
scout/scout_gazebo_sim/worlds/: empty.world  inspection.world  workshop_big.world  workshop_small.world
